k8s/lab3/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: explore-pvc
spec:
  containers:
  - name: explore-container
    image: busybox
    command: ["sh", "-c", "sleep 3600"]  # Keep the pod running for 1 hour
    volumeMounts:
    - name: pvc-data
      mountPath: /mnt/pvc
  volumes:
  - name: pvc-data
    persistentVolumeClaim:
      claimName: frontend-image-pvc
