k8s/lab3/frontend-deployment-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: alyesmaeil/frontend-todo:latest
        ports:
        - containerPort: 80
        volumeMounts:
        - name: frontend-images
          mountPath: /usr/share/nginx/html/images
      volumes:
      - name: frontend-images
        persistentVolumeClaim:
          claimName: frontend-image-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
